turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:13: error: type mismatch;
 found   : java.awt.Color
 required: Int
	val (a:Int,b:Int,c:Int) = rule(state)(x)
                                              ^